<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".presentation.generate_image.GenerateImageFragment">

    <TextView
        android:id="@+id/editDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_description"
        android:textColor="@color/primary"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/promptInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="top"
        android:hint="@string/prompt_hint"
        android:textColorHint="@color/primary"
        app:boxCornerRadiusBottomEnd="20dp"
        app:boxCornerRadiusBottomStart="20dp"
        app:boxCornerRadiusTopEnd="20dp"
        app:boxCornerRadiusTopStart="20dp"
        app:boxStrokeColor="@color/primary"
        app:boxStrokeWidth="@dimen/stroke_width_small"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editDesc">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/promptEditText"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:overScrollMode="always"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:singleLine="true"
            android:textColor="@color/primary"
            android:textColorHint="@color/primary" />
    </com.google.android.material.textfield.TextInputLayout>


    <RadioGroup
        android:id="@+id/chooseImageSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/promptInputLayout">

        <RadioButton
            android:id="@+id/size256"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/size_256"
            android:textColor="@drawable/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/size512"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:text="@string/size_512"
            android:textColor="@drawable/radio_flat_text_selector" />


        <RadioButton
            android:id="@+id/size1024"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:text="@string/size_1024"
            android:textColor="@drawable/radio_flat_text_selector" />
    </RadioGroup>

    <com.apachat.loadingbutton.core.customViews.CircularProgressButton
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_bg3"
        android:text="@string/generate"
        android:textAllCaps="false"
        android:textColor="@color/primary"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chooseImageSize" />


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generateButton">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/shimmerLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:visibility="gone"
                tools:visibility="visible">

                <GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:columnCount="2">


                    <View
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/radius_corner" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/radius_corner" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/radius_corner" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="200dp"
                        android:layout_columnWeight="1"
                        android:layout_margin="@dimen/margin_small"
                        android:background="@drawable/radius_corner" />


                </GridLayout>
            </com.facebook.shimmer.ShimmerFrameLayout>

            <GridLayout
                android:id="@+id/generatedImagesGrid"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:columnCount="2"
                android:visibility="gone">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/generatedImageCard"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/card_elevation_small"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/generatedImageView"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/generatedImageCard2"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/card_elevation_small"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/generatedImageView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />
                </com.google.android.material.card.MaterialCardView>


                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/generatedImageCard3"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/card_elevation_small"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/generatedImageView3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/generatedImageCard4"
                    android:layout_width="0dp"
                    android:layout_height="200dp"
                    android:layout_columnWeight="1"
                    android:layout_margin="@dimen/margin_small"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?attr/selectableItemBackground"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="@dimen/card_elevation_small"
                    app:strokeColor="@color/primary"
                    app:strokeWidth="2dp">

                    <ImageView
                        android:id="@+id/generatedImageView4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop" />
                </com.google.android.material.card.MaterialCardView>
            </GridLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>